# retrochains

./: .gitignore  .prettierignore  AGENTS.md  BC2.sha256  CLAUDE.md  Cargo.toml  LATTICE2.md  MSC500.md  MSC500.sha256  README.md  TODO  eslint.config.js  hash.py  loc.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.github/workflows/: wasm.yml
apps/explorer/: eslint.config.js  index.html  jest.config.js  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
artifacts/: README.md
crates/bcc/: Cargo.toml
crates/bcc-tasm/: Cargo.toml
crates/bcc-tlib/: Cargo.toml
crates/bcc-tlib/src/: dict.rs  lib.rs  main.rs  write.rs
crates/bcc-tlink/: Cargo.toml
crates/bcc-tlink/src/: archive.rs  lib.rs  link.rs  main.rs  map.rs  mz.rs  omf.rs  overlay.rs
crates/bcc-tlink/tests/: capstone.rs  synthetic.rs
crates/bcc-tlink/tests/data/overlay/intseg/: MAIN.C  MOD1.C  MOD2.C
crates/bcc-tlink/tests/data/overlay/multi/: MAIN.C  MOD2.C
crates/bcc-wasm/: Cargo.toml
crates/bcc-wasm/src/: lib.rs
crates/bcc/src/: cli.rs  dos_time.rs  emit_obj.rs  emit_s.rs  lib.rs  main.rs  preprocess.rs
crates/bcc/src/ast/: mod.rs
crates/bcc/src/codegen/: emitter_arrays_1.rs  emitter_arrays_2.rs  emitter_assign_1.rs  emitter_assign_2.rs  emitter_assign_3.rs  emitter_bitfields.rs  emitter_classify.rs  emitter_conditions.rs  emitter_emit_core_1.rs  emitter_emit_core_2.rs  emitter_emit_core_3.rs  emitter_expressions.rs  emitter_lvalues.rs  emitter_members.rs  emitter_statements.rs  fold.rs  line_map.rs  locals.rs  mod.rs  plan.rs
crates/bcc/src/lex/: lexer.rs  mod.rs  token.rs
crates/bcc/src/parse/: mod.rs  parse_core.rs  parse_decls.rs  parse_exprs.rs  parse_stmts.rs  parse_types.rs
crates/decompile/: Cargo.toml
crates/decompile-wasm/: Cargo.toml
crates/decompile-wasm/src/: lib.rs
crates/decompile/examples/: asm_gaps.rs  probe.rs  sweep.rs  triage.rs
crates/decompile/src/: emit.rs  hi_ir.rs  lib.rs  lo_ir.rs  verify.rs
crates/fingerprint/: Cargo.toml
crates/fingerprint/examples/: mine.rs
crates/fingerprint/src/: idioms.rs  lib.rs  lib_archive.rs  main.rs  obj_analysis.rs
crates/fingerprint/tests/: jetpack.rs
crates/fixtures/: Cargo.toml
crates/fixtures/src/: dashboard.rs  diff.rs  fixture.rs  harness.rs  lib.rs  main.rs  manifest.rs  timefmt.rs
crates/msc/: Cargo.toml
crates/msc-wasm/: Cargo.toml
crates/msc-wasm/src/: lib.rs
crates/msc/src/: lex.rs  lib.rs  main.rs  parse.rs  preproc.rs
crates/msc/src/codegen/: assign.rs  calls.rs  cond.rs  constprop.rs  expr.rs  func.rs  mod.rs  statements.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: bc2.rs  distro.rs  dosbox.rs  lib.rs  main.rs  provision.rs
crates/tasm/: Cargo.toml
crates/tasm/src/: emit.rs  encode.rs  ir.rs  lex.rs  lib.rs  parse.rs
crates/tasm/src/encode/: emit_instr.rs  helpers.rs  segment.rs  size.rs
crates/tasm/src/parse/: alu_arith.rs  alu_logic.rs  alu_mov.rs  instr.rs  mod.rs  operands.rs
crates/tlink/: Cargo.toml
crates/tlink/src/: lib.rs  main.rs
crates/x86/: Cargo.toml
crates/x86/src/: lib.rs
fixtures/001-empty-main/: invocation.bcc.toml
fixtures/002-empty-main-obj/: invocation.bcc.toml  invocation.msc.toml
fixtures/003-return-constant/: invocation.bcc.toml
fixtures/004-int-variable/: invocation.toml
fixtures/005-add-literals/: invocation.toml
fixtures/006-add-locals/: HELLO.C
fixtures/007-sub-locals/: invocation.bcc.toml
fixtures/008-mul-locals/: HELLO.C  invocation.bcc.toml
fixtures/009-two-functions/: HELLO.C
fixtures/011-char-frame/: HELLO.C
fixtures/012-div-locals/: invocation.bcc.toml
fixtures/013-mod-locals/: invocation.bcc.toml
fixtures/014-and-locals/: invocation.bcc.toml
fixtures/015-or-locals/: HELLO.C
fixtures/016-xor-locals/: HELLO.C
fixtures/017-shl-locals/: HELLO.C  invocation.toml
fixtures/018-shr-locals/: HELLO.C  invocation.bcc.toml
fixtures/019-cmp-lt/: invocation.bcc.toml
fixtures/020-cmp-eq/: invocation.toml
fixtures/022-cmp-gt/: invocation.bcc.toml
fixtures/023-cmp-le/: invocation.toml
fixtures/024-cmp-ge/: invocation.bcc.toml
fixtures/026-if-else/: invocation.toml
fixtures/027-while/: invocation.toml
fixtures/029-while-two-locals/: HELLO.C  invocation.bcc.toml
fixtures/031-while-many-locals/: invocation.toml
fixtures/032-loop-only-cond-uses-it/: invocation.toml
fixtures/033-fn-one-arg/: invocation.bcc.toml
fixtures/034-fn-two-args/: invocation.toml
fixtures/035-fn-arg-many-uses/: HELLO.C  invocation.bcc.toml
fixtures/038-unary-not-local/: invocation.bcc.toml
fixtures/040-preinc-stmt-stack/: invocation.bcc.toml
fixtures/041-postinc-stmt-stack/: invocation.bcc.toml
fixtures/042-preinc-stmt-reg/: invocation.bcc.toml
fixtures/044-postinc-expr-stack/: HELLO.C  invocation.bcc.toml
fixtures/045-predec-stmt-stack/: invocation.toml
fixtures/046-preinc-stmt-stack-forced/: invocation.toml
fixtures/048-six-eligible-spill/: invocation.bcc.toml
fixtures/049-fn-three-args/: invocation.toml
fixtures/050-three-chars/: HELLO.C  invocation.toml
fixtures/051-char-and-int/: invocation.bcc.toml
fixtures/052-char-param/: HELLO.C  invocation.toml
fixtures/053-return-char/: invocation.bcc.toml
fixtures/054-char-compare/: invocation.toml
fixtures/055-call-char-arg-var/: invocation.bcc.toml
fixtures/057-or-if-locals/: HELLO.C  invocation.toml
fixtures/058-and-with-compares/: invocation.toml
fixtures/060-or-as-value/: invocation.toml
fixtures/061-for-simple/: HELLO.C
fixtures/062-do-while-simple/: invocation.bcc.toml
fixtures/063-while-break/: invocation.bcc.toml
fixtures/064-while-continue/: HELLO.C  invocation.bcc.toml
fixtures/065-for-with-break/: invocation.bcc.toml
scripts/: build-wasm.sh  bulk_asm_recapture.sh  bulk_msc_capture.sh  categorize_fixtures.py  check-wasm-size.sh  fixture_gap_loop.workflow.js  gen-fixture-manifest.mjs  mscdiff.sh  objdis.py  objrec.py
specs/: FINGERPRINTS.md  FIXTURES.md  GLOSSARY.md  MSC_FINGERPRINTS.md  OPEN_QUESTIONS.md  OVERVIEW.md  PROVISIONING.md  README.md  RUNNING_BCC.md
(+30516 files in other folders)
