[workspace]
resolver = "3"
members = [
    "crates/bcc",
    "crates/tlink",
    "crates/tasm",
    "crates/obj",
    "crates/x86",
    "crates/bcc-wasm",
    "crates/oracle",
    "crates/fixtures",
    "crates/fingerprint",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/wilkie/borland-c20"
authors = ["wilkie"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Style lints that are noisy without adding value for this codebase.
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Triggers constantly on real-world product names (Borland, DOSBox, BCC, BC2,
# TASM, TLINK). They aren't code items, so backticks just clutter the prose.
doc_markdown = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
