[package]
name = "bcc-tlink"
description = "Reimplementation of Turbo Link 4.0, the Borland C++ 2.0 linker (TLINK.EXE)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "bcc_tlink"
path = "src/lib.rs"

[[bin]]
name = "tlink"
path = "src/main.rs"

[dependencies]
obj = { path = "../obj" }
thiserror = "2"

[dev-dependencies]
sha2 = "0.10"
bcc-tlib = { path = "../bcc-tlib" }

[lints]
workspace = true
