[package]
name = "bcc-wasm"
description = "WASM entry points wrapping the bcc/bcc-tlink/bcc-tasm crates for the @retrochains/bcc TypeScript package"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "bcc_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bcc = { path = "../bcc" }
bcc-tlink = { path = "../bcc-tlink" }
bcc-tasm = { path = "../bcc-tasm" }

[lints]
workspace = true
