[package]
name = "bcc-wasm"
description = "WASM bindings for the BCC toolchain (bcc/tasm/tlink/tlib), driving the @retrochains/bcc TypeScript package"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "bcc_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# The whole crate is wasm-only glue (`#![cfg(target_arch = "wasm32")]`), so every
# dependency — the toolchain crates and wasm-bindgen — is target-gated. On the
# host this crate compiles to an empty lib and pulls nothing in, so a normal
# `cargo build --workspace` never needs the wasm toolchain. Build the real module
# with `scripts/build-wasm.sh` (which targets wasm32-unknown-unknown).
[target.'cfg(target_arch = "wasm32")'.dependencies]
bcc = { path = "../bcc" }
bcc-tasm = { path = "../bcc-tasm" }
bcc-tlink = { path = "../bcc-tlink" }
bcc-tlib = { path = "../bcc-tlib" }
# Pin tightly: the wasm-bindgen *crate* version must match the wasm-bindgen-cli
# the build script runs (the usual version-skew footgun). Bump both together.
wasm-bindgen = "=0.2.100"

[lints]
workspace = true
