[package]
name = "decompile"
description = "Decompiler for Borland C++ 2.0 binaries: lift machine code to compiler-accurate C, verified by recompiling with the byte-exact bcc. See specs/decompiler/."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "decompile"
path = "src/lib.rs"

[features]
# The bundled `bcc` recompiler backend (default). Disable for a compiler-free
# decompiler core — verification is then injected via `verify_with` /
# `render_idiomatic_with`, so a wasm "universal decompiler" module links no
# compiler (the host supplies whichever compiler module `classify` points at).
default = ["bcc"]
bcc = ["dep:bcc"]

[dependencies]
# The default recompile-verify backend (§8 of specs/decompiler/IR.md): compiles
# candidate C with the byte-exact compiler and diffs its `_TEXT`. Optional so the
# core can build without any compiler (see the `bcc` feature).
bcc = { path = "../bcc", optional = true }
# `code_of_obj` pulls the first CODE-class segment back out of the OBJ bytes;
# `recognize` drives the lift — needed in every build.
fingerprint = { path = "../fingerprint" }
thiserror = "2"

[lints]
workspace = true
