[package]
name = "fingerprint"
description = "Classify OBJ/LIB files by toolchain (Borland C++ 2.0 fingerprint detection). See specs/FINGERPRINTS.md."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "fingerprint"
path = "src/lib.rs"

[[bin]]
name = "xfingerprint"
path = "src/main.rs"

[dependencies]
obj = { path = "../obj" }
thiserror = "2"

# The idiom gap-miner (`examples/mine.rs`) compiles the fixture corpus with the
# byte-exact compiler to find the most common unrecognized idioms. Kept to
# dev-dependencies so the recognizer itself stays lightweight.
[dev-dependencies]
bcc = { path = "../bcc" }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }

[lints]
workspace = true
